--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,22 @@
     package="com.example.mycontactlist">
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <permission
+        android:name="com.example.mycontactlist.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature"
+        />
+
+    <uses-permission
+        android:name="com.example.mycontactlist.permission.MAPS_RECEIVE"
+        />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESSS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission
+        android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true"/>
 
     <application
         android:allowBackup="true"
@@ -23,6 +39,12 @@
         <activity android:name=".ContactActivity"/>
         <activity android:name=".ContactSettingsActivity"/>
         <activity android:name=".ContactMapActivity"/>
+
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDKczJWqJbhziRASqMKhm6CMTTJrNKsFfE"/>
+
 
     </application>
 
