--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'com.android.support:support-annotations:28.0.0'
-    implementation 'com.google.android.gms:play-services:12.0.1'
+    implementation 'com.android.support:support-annotations:29.0.0'
+    implementation 'com.google.android.gms:play-services:12.0.0'
     implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.google.maps.android:android-maps-utils:1.0.2'
 
 }
